--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "classname": "^0.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
