--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "eslint": "8.22.0",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
@@ -33,7 +35,9 @@
     "start": "react-scripts start --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +59,6 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12"
-  }
+  },
+  "homepage": "https://github.com/SaltGreenson/cryptocurrency"
 }
