--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "@types/styled-components": "^5.1.26"
   }
 }
