--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "classname": "^0.0.0",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "eslint": "8.22.0",
     "formik": "^2.2.9",
@@ -28,6 +28,7 @@
     "redux-thunk": "^2.4.1",
     "redux-ts": "^4.3.0",
     "reselect": "^4.1.6",
+    "styled-components": "^5.3.5",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
