--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-thunk": "^2.4.1",
     "redux-ts": "^4.3.0",
     "reselect": "^4.1.6",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -59,6 +60,8 @@
     ]
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3"
   }
 }
