--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
@@ -30,14 +29,14 @@
     "reselect": "^4.1.6",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.8.3",
+    "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -84,10 +83,15 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@types/cors": "^2.8.12",
+    "@types/jest": "^29.1.1",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "prop-types": "^15.8.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0"
   }
 }
