--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "eslint": "8.22.0",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "redux-thunk": "^2.4.1",
     "redux-ts": "^4.3.0",
     "reselect": "^4.1.6",
@@ -36,7 +38,8 @@
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test:jest": "jest",
+    "test:react": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -83,10 +86,13 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@types/cors": "^2.8.12",
+    "@types/dompurify": "^2.3.4",
     "@types/jest": "^29.1.1",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "dompurify": "^2.4.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "prop-types": "^15.8.1",
