--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/cors": "^2.8.12",
     "@types/dompurify": "^2.3.4",
     "@types/jest": "^29.1.1",
+    "@types/jest-when": "^3.5.2",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
@@ -95,6 +96,7 @@
     "dompurify": "^2.4.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-when": "^3.5.1",
     "prop-types": "^15.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
