--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
     "redux-thunk": "^2.4.1",
     "redux-ts": "^4.3.0",
@@ -76,24 +76,28 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/node-logger": "^6.5.12",
     "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.12",
+    "@storybook/react": "^6.1.21",
     "@storybook/testing-library": "^0.0.13",
     "@types/cors": "^2.8.12",
     "@types/dompurify": "^2.3.4",
-    "@types/jest": "^29.1.1",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^29.1.2",
     "@types/jest-when": "^3.5.2",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-named-exports-order": "^0.0.2",
     "dompurify": "^2.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "jest-when": "^3.5.1",
