--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test:jest": "jest",
-    "test:react": "react-scripts test",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build:storybook": "build-storybook -s public",
+    "cypress": "cypress open",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "test:jest": "jest",
+    "test:react": "react-scripts test",
+    "test:cypress": "start-server-and-test start http://localhost:3000/ cypress"
   },
   "eslintConfig": {
     "extends": [
@@ -86,6 +88,7 @@
     "@storybook/react": "^6.1.21",
     "@storybook/testing-library": "^0.0.13",
     "@types/cors": "^2.8.12",
+    "@types/cypress": "^1.1.3",
     "@types/dompurify": "^2.3.4",
     "@types/enzyme": "^3.10.12",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -95,6 +98,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cypress": "^10.10.0",
     "dompurify": "^2.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -102,6 +106,7 @@
     "jest-environment-jsdom": "^29.1.2",
     "jest-when": "^3.5.1",
     "prop-types": "^15.8.1",
+    "start-server-and-test": "^1.14.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0"
