--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "deploy": "gh-pages -d build",
     "test:jest": "jest",
     "test:react": "react-scripts test",
-    "test:cypress": "start-server-and-test start http://localhost:3000/ cypress"
+    "test:cypress": "start-server-and-test start http://localhost:3001/ cypress"
   },
   "eslintConfig": {
     "extends": [
@@ -77,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@cypress/snapshot": "^2.1.7",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.12",
