--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://saltgreenson.github.io/cryptocurrency",
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +16,6 @@
     "classname": "^0.0.0",
     "classnames": "^2.3.1",
     "cors": "^2.8.5",
-    "eslint": "8.22.0",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.4",
@@ -23,9 +23,11 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
+    "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "redux-ts": "^4.3.0",
     "reselect": "^4.1.6",
@@ -46,7 +48,7 @@
     "deploy": "gh-pages -d build",
     "test:jest": "jest",
     "test:react": "react-scripts test",
-    "test:cypress": "start-server-and-test start http://localhost:3001/ cypress"
+    "test:cypress": "start-server-and-test start http://localhost:3000/ cypress"
   },
   "eslintConfig": {
     "extends": [
@@ -98,11 +100,19 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "cypress": "^10.10.0",
     "dompurify": "^2.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "jest-when": "^3.5.1",
