--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "cryptocurrency",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "homepage": "https://saltgreenson.github.io/cryptocurrency",
   "dependencies": {
     "-": "^0.0.1",
+    "@tanstack/react-query": "^4.18.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trpc/client": "^10.4.1",
+    "@trpc/next": "^10.4.1",
+    "@trpc/react": "^9.27.4",
+    "@trpc/react-query": "^10.4.1",
+    "@trpc/server": "^10.4.1",
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
@@ -15,14 +22,13 @@
     "chart.js": "^3.9.1",
     "classname": "^0.0.0",
     "classnames": "^2.3.1",
-    "cors": "^2.8.5",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
+    "react-query": "^4.0.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -31,11 +37,12 @@
     "redux-thunk": "^2.4.1",
     "redux-ts": "^4.3.0",
     "reselect": "^4.1.6",
+    "server": "^1.0.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "styled-components": "^5.3.6",
     "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "zod": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts start --openssl-legacy-provider start",
@@ -119,6 +126,7 @@
     "prop-types": "^15.8.1",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0"
   }
